@@ -3141,7 +3141,7 @@ annotation|@
 name|Override
 specifier|public
 name|long
-name|getUniqueTermCount
+name|size
 parameter_list|()
 block|{
 return|return
@@ -3213,10 +3213,10 @@ block|}
 block|}
 annotation|@
 name|Override
-DECL|method|getUniqueFieldCount
+DECL|method|size
 specifier|public
 name|int
-name|getUniqueFieldCount
+name|size
 parameter_list|()
 block|{
 return|return
