@@ -1497,10 +1497,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|getUniqueFieldCount
+DECL|method|size
 specifier|public
 name|int
-name|getUniqueFieldCount
+name|size
 parameter_list|()
 block|{
 if|if
@@ -1648,10 +1648,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|getUniqueTermCount
+DECL|method|size
 specifier|public
 name|long
-name|getUniqueTermCount
+name|size
 parameter_list|()
 block|{
 return|return
@@ -3127,7 +3127,7 @@ if|if
 condition|(
 name|fields
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 operator|==
 literal|0
