@@ -5093,7 +5093,7 @@ argument_list|(
 name|field
 argument_list|)
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 expr_stmt|;
 if|if
@@ -5424,7 +5424,7 @@ name|fieldCount
 init|=
 name|fields
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 decl_stmt|;
 if|if
