@@ -215,11 +215,11 @@ throws|throws
 name|IOException
 function_decl|;
 comment|/** Returns the number of terms for this field, or -1 if this     *  measure isn't stored by the codec. Note that, just like     *  other term measures, this measure does not take deleted     *  documents into account. */
-DECL|method|getUniqueTermCount
+DECL|method|size
 specifier|public
 specifier|abstract
 name|long
-name|getUniqueTermCount
+name|size
 parameter_list|()
 throws|throws
 name|IOException
