@@ -84,22 +84,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|codecs
-operator|.
-name|lucene40
-operator|.
-name|Lucene40PostingsFormat
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|index
 operator|.
 name|AtomicReader
@@ -544,7 +528,7 @@ name|assertEquals
 argument_list|(
 name|terms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|,
 name|enums
@@ -852,7 +836,7 @@ name|assertEquals
 argument_list|(
 name|terms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|,
 name|enums
@@ -1190,7 +1174,7 @@ name|assertEquals
 argument_list|(
 name|terms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|,
 name|enums
@@ -1270,7 +1254,7 @@ name|assertEquals
 argument_list|(
 name|terms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|,
 name|enums
