@@ -1978,7 +1978,7 @@ literal|2
 argument_list|,
 name|tfv1
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -2011,7 +2011,7 @@ literal|2
 argument_list|,
 name|tfv2
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
