@@ -994,7 +994,7 @@ if|if
 condition|(
 name|leftFields
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 operator|!=
 operator|-
@@ -1002,7 +1002,7 @@ literal|1
 operator|&&
 name|rightFields
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 operator|!=
 operator|-
@@ -1015,12 +1015,12 @@ name|info
 argument_list|,
 name|leftFields
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|,
 name|rightFields
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -1388,7 +1388,7 @@ if|if
 condition|(
 name|leftTerms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 operator|!=
 operator|-
@@ -1396,7 +1396,7 @@ literal|1
 operator|&&
 name|rightTerms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 operator|!=
 operator|-
@@ -1409,12 +1409,12 @@ name|info
 argument_list|,
 name|leftTerms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|,
 name|rightTerms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
