@@ -1194,7 +1194,7 @@ literal|3
 argument_list|,
 name|result
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -1288,7 +1288,7 @@ literal|3
 argument_list|,
 name|results
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
