@@ -4001,7 +4001,7 @@ literal|null
 operator|||
 name|d2
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 operator|==
 literal|0
