@@ -706,7 +706,7 @@ literal|1
 argument_list|,
 name|vectors
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -909,7 +909,7 @@ literal|4
 argument_list|,
 name|v
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -997,7 +997,7 @@ name|i
 index|]
 argument_list|)
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -1331,7 +1331,7 @@ literal|1
 argument_list|,
 name|vectors
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -1577,7 +1577,7 @@ literal|1
 argument_list|,
 name|vectors
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -2276,7 +2276,7 @@ literal|10
 argument_list|,
 name|vector
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -2797,7 +2797,7 @@ literal|1
 argument_list|,
 name|vectors
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -3129,7 +3129,7 @@ literal|1
 argument_list|,
 name|vectors
 operator|.
-name|getUniqueFieldCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -3154,7 +3154,7 @@ literal|1
 argument_list|,
 name|vector
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
