@@ -702,10 +702,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|getUniqueFieldCount
+DECL|method|size
 specifier|public
 name|int
-name|getUniqueFieldCount
+name|size
 parameter_list|()
 block|{
 return|return
@@ -799,10 +799,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|getUniqueTermCount
+DECL|method|size
 specifier|public
 name|long
-name|getUniqueTermCount
+name|size
 parameter_list|()
 block|{
 return|return
