@@ -646,10 +646,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|getUniqueFieldCount
+DECL|method|size
 specifier|public
 name|int
-name|getUniqueFieldCount
+name|size
 parameter_list|()
 throws|throws
 name|IOException
