@@ -4660,7 +4660,7 @@ name|Long
 argument_list|(
 name|terms
 operator|.
-name|getUniqueTermCount
+name|size
 argument_list|()
 argument_list|)
 operator|.
